--- a/css/styles.css
+++ b/css/styles.css
@@ -104,12 +104,23 @@ section {
 .hero {
     height: 100vh;
     width: 100%;
-    /* background: url(../assets/img/new_21.png); */
-    background-position: top right;
-    background-size: cover;
+    /* background: url(../assets/img/Victoria.png); */
+    /* background-position: top right;
+    background-size: cover; */
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
+    position: relative;
+}
+
+.hero img {
+    width: 550px;
+    height: 450px;
+    /* position: absolute;
+    right: 0;
+    left: 20; */
+    /* top: 10;
+    bottom: 0; */
 }
 
 .main-content h4 {
@@ -194,13 +205,13 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 8rem;
+    gap: 3rem;
 }
 
 .about-img img {
     width: 100%;
-    height: 530px;
-    max-width: 530px;
+    height: 400px;
+    max-width: 400px;
     border-radius: 50%;
     object-fit: cover;
     border: 7px solid var(--main-color);
@@ -262,6 +273,23 @@ section {
 
 .box img {
     margin-bottom: 20px;
+}
+
+.box svg {
+    fill: var(--main-color);
+    width: 50px;
+    height: 50px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.box i {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 20px;
+    /* display: inline-flex; */
+    transform: scale(1.03);
 }
 
 .box h3 {
