--- a/css/styles.css
+++ b/css/styles.css
@@ -104,9 +104,6 @@ section {
 .hero {
     height: 100vh;
     width: 100%;
-    /* background: url(../assets/img/Victoria.png); */
-    /* background-position: top right;
-    background-size: cover; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -116,11 +113,14 @@ section {
 .hero img {
     width: 550px;
     height: 450px;
-    /* position: absolute;
-    right: 0;
-    left: 20; */
-    /* top: 10;
-    bottom: 0; */
+}
+
+@media (max-width: 950px) {
+
+
+    .hero img {
+        display: none;
+    }
 }
 
 .main-content h4 {
